@@ -38,9 +38,9 @@ import static uk.gov.hmcts.sptribs.testutil.TestEventConstants.CASEWORKER_EDIT_D
 
 
 @ExtendWith(MockitoExtension.class)
-class CaseWorkerEditDraftOrderTest {
+class CaseworkerEditDraftOrderTest {
     @InjectMocks
-    private CaseWorkerEditDraftOrder caseWorkerEditDraftOrder;
+    private CaseworkerEditDraftOrder caseworkerEditDraftOrder;
 
     @Mock
     private OrderService orderService;
@@ -50,7 +50,7 @@ class CaseWorkerEditDraftOrderTest {
 
         final ConfigBuilderImpl<CaseData, State, UserRole> configBuilder = createCaseDataConfigBuilder();
 
-        caseWorkerEditDraftOrder.configure(configBuilder);
+        caseworkerEditDraftOrder.configure(configBuilder);
 
         assertThat(getEventsFrom(configBuilder).values())
             .extracting(Event::getId)
@@ -100,14 +100,14 @@ class CaseWorkerEditDraftOrderTest {
 
         //When
         AboutToStartOrSubmitResponse<CaseData, State> response =
-            caseWorkerEditDraftOrder.aboutToSubmit(updatedCaseDetails, beforeDetails);
+            caseworkerEditDraftOrder.aboutToSubmit(updatedCaseDetails, beforeDetails);
         assertThat(response).isNotNull();
         DraftOrderCIC updatedDraftOrder = response.getData()
-            .getCicCase().getDraftOrderCICList().get(0).getValue();
+            .getCicCase().getDraftOrderCICList().getFirst().getValue();
         assertThat(updatedDraftOrder.getDraftOrderContentCIC().getOrderTemplate()).isEqualTo(OrderTemplate.CIC6_GENERAL_DIRECTIONS);
         assertThat(updatedDraftOrder.getTemplateGeneratedDocument()).isNotNull();
 
-        SubmittedCallbackResponse draftCreatedResponse = caseWorkerEditDraftOrder.submitted(updatedCaseDetails, beforeDetails);
+        SubmittedCallbackResponse draftCreatedResponse = caseworkerEditDraftOrder.submitted(updatedCaseDetails, beforeDetails);
         //  Then
         assertThat(draftCreatedResponse).isNotNull();
     }
